# ITCR.DatosII.ProyectoI.Server

./: .gitignore  CMakeLists.txt  README.md  backupResults.json  petitions.json  requests.json  results.json  structRequest.json
doc/html/: index.html
src/: Doxyfile
src/C++/: Logger.cpp  Logger.h  MemoryMap.cpp  MemoryMap.h  Request.cpp  Request.h  jsonParser.cpp  jsonParser.h  mServer.cpp  mServer.h  main.cpp
src/DataStructures/: LinkedList.cpp  LinkedList.h  Node.h
